2014-09-01  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	* tree-ssa-math-opts.c (struct symbolic_number): Clarify comment about
	the size of byte markers.
	(do_shift_rotate): Fix confusion between host, target and marker byte
	size.
	(verify_symbolic_number_p): Likewise.
	(find_bswap_or_nop_1): Likewise.
	(find_bswap_or_nop): Likewise.

2014-09-01  Olivier Hainque  <hainque@adacore.com>

	* Makefile.in (FLAGS_TO_PASS): Propagate INSTALL, INSTALL_DATA,
	INSTALL_SCRIPT and INSTALL_PROGRAM as well.

2014-09-01  Jakub Jelinek  <jakub@redhat.com>

	* config/gnu-user.h (LIBLSAN_EARLY_SPEC): Define.
	* gcc.c (LIBLSAN_SPEC, LIBLSAN_EARLY_SPEC): Follow LIBTSAN*_SPEC.
	(SANITIZER_EARLY_SPEC): Include LIBLSAN_EARLY_SPEC for -fsanitize=leak.

2014-09-01  Yury Gribov  <y.gribov@samsung.com>

	PR sanitizer/61897
	PR sanitizer/62140
	* asan.c (asan_mem_ref_get_end): Handle non-ptroff_t lengths.
	(build_check_stmt): Likewise.
	(instrument_strlen_call): Likewise.
	(asan_expand_check_ifn): Likewise and fix types.
	(maybe_cast_to_ptrmode): New function.

2014-09-01  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* config/mcore/mcore.c (try_constant_tricks): Fix declaration.

2014-08-31  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/generic.texi (Deficiencies): Add note on exemplary mistakes.

2014-08-30  John David Anglin  <danglin@gcc.gnu.org>

	* config/pa/pa.c (pa_assemble_integer): Don't add PLABEL relocation
	prefix to function labels when generating fast indirect calls.

2014-08-30  David Malcolm  <dmalcolm@redhat.com>

	PR bootstrap/62304

	* gcc/reorg.c (skip_consecutive_labels): Convert return type and
	param back from rtx_insn * to rtx.  Rename param from "label" to
	"label_or_return", reintroducing "label" as an rtx_insn * after
	we've ensured it's not a RETURN.
	(first_active_target_insn): Likewise for return type and param;
	add a checked cast to rtx_insn * once we've ensured "insn" is not
	a RETURN.
	(steal_delay_list_from_target): Convert param "pnew_thread" back